Bug 43889 - Wrong caps verification string with dataforms in plugins
Summary: Wrong caps verification string with dataforms in plugins
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/al...
Whiteboard: review+
Keywords: patch
Depends on:
Blocks:
 
Reported: 2011-12-16 08:01 UTC by Alban Crequy
Modified: 2011-12-16 09:02 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Alban Crequy 2011-12-16 08:01:14 UTC
The function gabble_connection_add_sidecar_own_caps_full() introduced by Bug #43588 does not compute the verification string correctly: dataforms are not taken into account in the hash.

The attached patch fixes it.
Comment 1 Jonny Lamb 2011-12-16 08:26:33 UTC
go on then.
Comment 2 Alban Crequy 2011-12-16 09:02:48 UTC
Committed:

commit 09cae896ad821071e7d1fcfc69503deeefb57534
Author: Alban Crequy <alban.crequy@collabora.co.uk>
Date:   Fri Dec 16 16:02:01 2011 +0000

    Compute the caps verification string correctly with dataforms in plugins
    
    https://bugs.freedesktop.org/show_bug.cgi?id=43889


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.