Compute the caps verification string correctly with dataforms in plugins

https://bugs.freedesktop.org/show_bug.cgi?id=43889